<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#646363"
    android:padding="16dp"
    tools:context=".example_practice">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textColor="#020101"
        />

    <TextView
            android:id="@+id/text_view_question_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_x"
            android:textColor="#020101"
            android:layout_below="@id/text_view_score"
            />
    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/_00_30"
        android:textColor="#020101"
        android:textSize="40sp"
        tools:ignore="RelativeOverlap" />


    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="question 1\n question 2\n question 3"

        android:textSize="20sp"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textColor="#020101" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3"
            />
    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="16dp" />



</RelativeLayout>